--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.application.name=emailServiceKafka
+
+server.port=8090
+management.endpoints.web.exposure.include=*
+management.endpoint.health.show-details=always
